changed merge for join, merge was dropping rows'

--- a/Jupyter labs/Marketcap tracker.ipynb
+++ b/Jupyter labs/Marketcap tracker.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +103,12 @@
     "    df = pd.DataFrame(content['Data'])\n",
     "    df = df.set_index('SYMBOL')\n",
     "    df[name] = df['VOLUME24HOURTO']\n",
+    "    del df['FULLNAME']\n",
+    "    del df['NAME']\n",
+    "    del df['ID']\n",
     "    del df['VOLUME24HOURTO']\n",
     "    del df['SUPPLY']\n",
-    "    firstDF = firstDF.merge(df)\n",
+    "    firstDF = firstDF.join(df, rsuffix='left')\n",
     "    if firstDF.shape[1] > 9:\n",
     "        firstDF = firstDF.drop(firstDF.columns[3],axis=1)\n",
     "    return firstDF"
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +143,7 @@
        "      <th>FULLNAME</th>\n",
        "      <th>NAME</th>\n",
        "      <th>ID</th>\n",
-       "      <th>VOLUME24HOURTO-58</th>\n",
+       "      <th>VOLUME24HOURTO-22</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SYMBOL</th>\n",
@@ -163,28 +166,28 @@
        "      <td>Ethereum (ETH)</td>\n",
        "      <td>Ethereum</td>\n",
        "      <td>7605</td>\n",
-       "      <td>3.851786e+04</td>\n",
+       "      <td>3.889826e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LINK</th>\n",
        "      <td>Chainlink (LINK)</td>\n",
        "      <td>Chainlink</td>\n",
        "      <td>309621</td>\n",
-       "      <td>2.756207e+04</td>\n",
+       "      <td>2.766776e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SXP</th>\n",
        "      <td>Swipe (SXP)</td>\n",
        "      <td>Swipe</td>\n",
        "      <td>931777</td>\n",
-       "      <td>7.632392e+03</td>\n",
+       "      <td>7.643759e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BCH</th>\n",
        "      <td>Bitcoin Cash (BCH)</td>\n",
        "      <td>Bitcoin Cash</td>\n",
        "      <td>202330</td>\n",
-       "      <td>6.555957e+03</td>\n",
+       "      <td>6.576548e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -192,6 +195,13 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NYN</th>\n",
+       "      <td>NYNJA (NYN)</td>\n",
+       "      <td>NYNJA</td>\n",
+       "      <td>924307</td>\n",
+       "      <td>1.697220e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FACE</th>\n",
@@ -221,37 +231,30 @@
        "      <td>517193</td>\n",
        "      <td>1.549326e-03</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SCAP</th>\n",
-       "      <td>SafeCapital (SCAP)</td>\n",
-       "      <td>SafeCapital</td>\n",
-       "      <td>932959</td>\n",
-       "      <td>1.547764e-03</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>1001 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   FULLNAME           NAME      ID  VOLUME24HOURTO-58\n",
+       "                   FULLNAME           NAME      ID  VOLUME24HOURTO-22\n",
        "SYMBOL                                                               \n",
        "LIPS        LipChain (LIPS)       LipChain  928569       1.300729e+07\n",
-       "ETH          Ethereum (ETH)       Ethereum    7605       3.851786e+04\n",
-       "LINK       Chainlink (LINK)      Chainlink  309621       2.756207e+04\n",
-       "SXP             Swipe (SXP)          Swipe  931777       7.632392e+03\n",
-       "BCH      Bitcoin Cash (BCH)   Bitcoin Cash  202330       6.555957e+03\n",
+       "ETH          Ethereum (ETH)       Ethereum    7605       3.889826e+04\n",
+       "LINK       Chainlink (LINK)      Chainlink  309621       2.766776e+04\n",
+       "SXP             Swipe (SXP)          Swipe  931777       7.643759e+03\n",
+       "BCH      Bitcoin Cash (BCH)   Bitcoin Cash  202330       6.576548e+03\n",
        "...                     ...            ...     ...                ...\n",
+       "NYN             NYNJA (NYN)          NYNJA  924307       1.697220e-03\n",
        "FACE        Faceter  (FACE)       Faceter   892684       1.676943e-03\n",
        "DMS     Documentchain (DMS)  Documentchain  932554       1.666154e-03\n",
        "XDNA            XDNA (XDNA)           XDNA  921608       1.550246e-03\n",
        "KLKS        Kalkulus (KLKS)       Kalkulus  517193       1.549326e-03\n",
-       "SCAP     SafeCapital (SCAP)    SafeCapital  932959       1.547764e-03\n",
        "\n",
        "[1001 rows x 4 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -290,74 +293,58 @@
        "      <th>FULLNAME</th>\n",
        "      <th>NAME</th>\n",
        "      <th>ID</th>\n",
-       "      <th>VOLUME24HOURTO-55</th>\n",
-       "      <th>VOLUME24HOURTO-56</th>\n",
-       "      <th>VOLUME24HOURTO-57</th>\n",
-       "      <th>VOLUME24HOURTO-58</th>\n",
-       "      <th>VOLUME24HOURTO-59</th>\n",
-       "      <th>VOLUME24HOURTO-00</th>\n",
+       "      <th>VOLUME24HOURTO-22</th>\n",
+       "      <th>VOLUME24HOURTO-41</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SYMBOL</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>LIPS</th>\n",
        "      <td>LipChain (LIPS)</td>\n",
        "      <td>LipChain</td>\n",
        "      <td>928569</td>\n",
        "      <td>1.300729e+07</td>\n",
        "      <td>1.300729e+07</td>\n",
-       "      <td>1.300729e+07</td>\n",
-       "      <td>1.300729e+07</td>\n",
-       "      <td>1.300729e+07</td>\n",
-       "      <td>1.300729e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Eminer (EM)</td>\n",
-       "      <td>Eminer</td>\n",
-       "      <td>931750</td>\n",
-       "      <td>7.038714e+02</td>\n",
-       "      <td>7.038721e+02</td>\n",
-       "      <td>7.038721e+02</td>\n",
-       "      <td>7.038721e+02</td>\n",
-       "      <td>7.038721e+02</td>\n",
-       "      <td>7.038721e+02</td>\n",
+       "      <th>ETH</th>\n",
+       "      <td>Ethereum (ETH)</td>\n",
+       "      <td>Ethereum</td>\n",
+       "      <td>7605</td>\n",
+       "      <td>3.889826e+04</td>\n",
+       "      <td>3.891130e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Numeraire (NMR)</td>\n",
-       "      <td>Numeraire</td>\n",
-       "      <td>166594</td>\n",
-       "      <td>4.043498e+02</td>\n",
-       "      <td>4.043498e+02</td>\n",
-       "      <td>4.043498e+02</td>\n",
-       "      <td>4.043498e+02</td>\n",
-       "      <td>4.043498e+02</td>\n",
-       "      <td>4.043498e+02</td>\n",
+       "      <th>LINK</th>\n",
+       "      <td>Chainlink (LINK)</td>\n",
+       "      <td>Chainlink</td>\n",
+       "      <td>309621</td>\n",
+       "      <td>2.766776e+04</td>\n",
+       "      <td>2.767121e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Troy (TROY)</td>\n",
-       "      <td>Troy</td>\n",
-       "      <td>932868</td>\n",
-       "      <td>3.591101e+02</td>\n",
-       "      <td>3.591101e+02</td>\n",
-       "      <td>3.591101e+02</td>\n",
-       "      <td>3.591101e+02</td>\n",
-       "      <td>3.591101e+02</td>\n",
-       "      <td>3.591101e+02</td>\n",
+       "      <th>SXP</th>\n",
+       "      <td>Swipe (SXP)</td>\n",
+       "      <td>Swipe</td>\n",
+       "      <td>931777</td>\n",
+       "      <td>7.643759e+03</td>\n",
+       "      <td>7.643759e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Fetch.AI (FET)</td>\n",
-       "      <td>Fetch.AI</td>\n",
-       "      <td>929174</td>\n",
-       "      <td>3.210088e+02</td>\n",
-       "      <td>3.210968e+02</td>\n",
-       "      <td>3.210968e+02</td>\n",
-       "      <td>3.210968e+02</td>\n",
-       "      <td>3.210968e+02</td>\n",
-       "      <td>3.210968e+02</td>\n",
+       "      <th>BCH</th>\n",
+       "      <td>Bitcoin Cash (BCH)</td>\n",
+       "      <td>Bitcoin Cash</td>\n",
+       "      <td>202330</td>\n",
+       "      <td>6.576548e+03</td>\n",
+       "      <td>6.577894e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -366,140 +353,92 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>617</th>\n",
+       "      <th>NYN</th>\n",
+       "      <td>NYNJA (NYN)</td>\n",
+       "      <td>NYNJA</td>\n",
+       "      <td>924307</td>\n",
+       "      <td>1.697220e-03</td>\n",
+       "      <td>1.697220e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FACE</th>\n",
        "      <td>Faceter  (FACE)</td>\n",
        "      <td>Faceter</td>\n",
        "      <td>892684</td>\n",
        "      <td>1.676943e-03</td>\n",
        "      <td>1.676943e-03</td>\n",
-       "      <td>1.676943e-03</td>\n",
-       "      <td>1.676943e-03</td>\n",
-       "      <td>1.676943e-03</td>\n",
-       "      <td>1.676943e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>618</th>\n",
+       "      <th>DMS</th>\n",
        "      <td>Documentchain (DMS)</td>\n",
        "      <td>Documentchain</td>\n",
        "      <td>932554</td>\n",
        "      <td>1.666154e-03</td>\n",
        "      <td>1.666154e-03</td>\n",
-       "      <td>1.666154e-03</td>\n",
-       "      <td>1.666154e-03</td>\n",
-       "      <td>1.666154e-03</td>\n",
-       "      <td>1.666154e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>619</th>\n",
+       "      <th>XDNA</th>\n",
        "      <td>XDNA (XDNA)</td>\n",
        "      <td>XDNA</td>\n",
        "      <td>921608</td>\n",
        "      <td>1.550246e-03</td>\n",
        "      <td>1.550246e-03</td>\n",
-       "      <td>1.550246e-03</td>\n",
-       "      <td>1.550246e-03</td>\n",
-       "      <td>1.550246e-03</td>\n",
-       "      <td>1.550246e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>620</th>\n",
+       "      <th>KLKS</th>\n",
        "      <td>Kalkulus (KLKS)</td>\n",
        "      <td>Kalkulus</td>\n",
        "      <td>517193</td>\n",
        "      <td>1.549326e-03</td>\n",
        "      <td>1.549326e-03</td>\n",
-       "      <td>1.549326e-03</td>\n",
-       "      <td>1.549326e-03</td>\n",
-       "      <td>1.549326e-03</td>\n",
-       "      <td>1.549326e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>621</th>\n",
-       "      <td>SafeCapital (SCAP)</td>\n",
-       "      <td>SafeCapital</td>\n",
-       "      <td>932959</td>\n",
-       "      <td>1.547764e-03</td>\n",
-       "      <td>1.547764e-03</td>\n",
-       "      <td>1.547764e-03</td>\n",
-       "      <td>1.547764e-03</td>\n",
-       "      <td>1.547764e-03</td>\n",
-       "      <td>1.547764e-03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>622 rows × 9 columns</p>\n",
+       "<p>1001 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                FULLNAME           NAME      ID  VOLUME24HOURTO-55  \\\n",
-       "0        LipChain (LIPS)       LipChain  928569       1.300729e+07   \n",
-       "1            Eminer (EM)         Eminer  931750       7.038714e+02   \n",
-       "2        Numeraire (NMR)      Numeraire  166594       4.043498e+02   \n",
-       "3            Troy (TROY)           Troy  932868       3.591101e+02   \n",
-       "4         Fetch.AI (FET)       Fetch.AI  929174       3.210088e+02   \n",
-       "..                   ...            ...     ...                ...   \n",
-       "617      Faceter  (FACE)       Faceter   892684       1.676943e-03   \n",
-       "618  Documentchain (DMS)  Documentchain  932554       1.666154e-03   \n",
-       "619          XDNA (XDNA)           XDNA  921608       1.550246e-03   \n",
-       "620      Kalkulus (KLKS)       Kalkulus  517193       1.549326e-03   \n",
-       "621   SafeCapital (SCAP)    SafeCapital  932959       1.547764e-03   \n",
+       "                   FULLNAME           NAME      ID  VOLUME24HOURTO-22  \\\n",
+       "SYMBOL                                                                  \n",
+       "LIPS        LipChain (LIPS)       LipChain  928569       1.300729e+07   \n",
+       "ETH          Ethereum (ETH)       Ethereum    7605       3.889826e+04   \n",
+       "LINK       Chainlink (LINK)      Chainlink  309621       2.766776e+04   \n",
+       "SXP             Swipe (SXP)          Swipe  931777       7.643759e+03   \n",
+       "BCH      Bitcoin Cash (BCH)   Bitcoin Cash  202330       6.576548e+03   \n",
+       "...                     ...            ...     ...                ...   \n",
+       "NYN             NYNJA (NYN)          NYNJA  924307       1.697220e-03   \n",
+       "FACE        Faceter  (FACE)       Faceter   892684       1.676943e-03   \n",
+       "DMS     Documentchain (DMS)  Documentchain  932554       1.666154e-03   \n",
+       "XDNA            XDNA (XDNA)           XDNA  921608       1.550246e-03   \n",
+       "KLKS        Kalkulus (KLKS)       Kalkulus  517193       1.549326e-03   \n",
        "\n",
-       "     VOLUME24HOURTO-56  VOLUME24HOURTO-57  VOLUME24HOURTO-58  \\\n",
-       "0         1.300729e+07       1.300729e+07       1.300729e+07   \n",
-       "1         7.038721e+02       7.038721e+02       7.038721e+02   \n",
-       "2         4.043498e+02       4.043498e+02       4.043498e+02   \n",
-       "3         3.591101e+02       3.591101e+02       3.591101e+02   \n",
-       "4         3.210968e+02       3.210968e+02       3.210968e+02   \n",
-       "..                 ...                ...                ...   \n",
-       "617       1.676943e-03       1.676943e-03       1.676943e-03   \n",
-       "618       1.666154e-03       1.666154e-03       1.666154e-03   \n",
-       "619       1.550246e-03       1.550246e-03       1.550246e-03   \n",
-       "620       1.549326e-03       1.549326e-03       1.549326e-03   \n",
-       "621       1.547764e-03       1.547764e-03       1.547764e-03   \n",
+       "        VOLUME24HOURTO-41  \n",
+       "SYMBOL                     \n",
+       "LIPS         1.300729e+07  \n",
+       "ETH          3.891130e+04  \n",
+       "LINK         2.767121e+04  \n",
+       "SXP          7.643759e+03  \n",
+       "BCH          6.577894e+03  \n",
+       "...                   ...  \n",
+       "NYN          1.697220e-03  \n",
+       "FACE         1.676943e-03  \n",
+       "DMS          1.666154e-03  \n",
+       "XDNA         1.550246e-03  \n",
+       "KLKS         1.549326e-03  \n",
        "\n",
-       "     VOLUME24HOURTO-59  VOLUME24HOURTO-00  \n",
-       "0         1.300729e+07       1.300729e+07  \n",
-       "1         7.038721e+02       7.038721e+02  \n",
-       "2         4.043498e+02       4.043498e+02  \n",
-       "3         3.591101e+02       3.591101e+02  \n",
-       "4         3.210968e+02       3.210968e+02  \n",
-       "..                 ...                ...  \n",
-       "617       1.676943e-03       1.676943e-03  \n",
-       "618       1.666154e-03       1.666154e-03  \n",
-       "619       1.550246e-03       1.550246e-03  \n",
-       "620       1.549326e-03       1.549326e-03  \n",
-       "621       1.547764e-03       1.547764e-03  \n",
-       "\n",
-       "[622 rows x 9 columns]"
+       "[1001 rows x 5 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b = loop(b)\n",
+    "b = loop(df)\n",
     "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://min-api.cryptocompare.com/data/top/volumes?tsym=BTC&limit=1000'\n",
-    "output = requests.get(url)\n",
-    "content = json.loads(output.content.decode('utf-8'))\n",
-    "df = pd.DataFrame(content['Data'])\n",
-    "df = df.set_index('SYMBOL')"
    ]
   }
  ],
